--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.6.10",
+    "firebase": "^6.2.4",
+    "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
